@@ -196,6 +196,7 @@ John Swensen
 Ariel Tankus
 Georg Thimm
 Duncan Temple Lang
+Kris Thielemans
 Olaf Till
 Thomas Treichl
 Utkarsh Upadhyay
